1. 년, 월로 해당 일자 db 조회 2. SpinnerDialog.kt 추가 3. DatabaseModule.kt 추가 4. api로 조회한 데이터 db insert 추가 5. SearchFragment.kt 추가 6. SearchViewModel.kt 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,8 @@ dependencies {
     implementation 'com.tickaroo.tikxml:core:0.8.13'
     implementation 'com.tickaroo.tikxml:retrofit-converter:0.8.13'
 
+    //room
+    def room_version = "2.2.6"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
